# dromaius816

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_65816.md  build.sh  toolchain-mingw.cmake
docs/: README_65816.md  README_bankLatch.md  README_diario.md  README_emulator.md  README_journal.md  README_links.md  README_setup.md  README_signalHistory.md
docs/65xx_bible/: DOC_0000_65xx_Bible.md  DOC_0010_6510_instruction_set.md  DOC_0020_65816_instruction_set.md  DOC_0030_6510_illegal_opcodes.md  DOC_0040_instruction_charts.md  DOC_0050_instruction_timing.md
src/: chip_oscillator.c  context.c  cpu.h  cpu_6502.c  cpu_65816.c  cpu_65816.h  cpu_65816_opcodes.h  cpu_65816_trace.h  dev_commodore_pet.c  dev_commodore_pet.h  dev_minimal_6502.c  dev_minimal_6502.h  dev_minimal_65816.c  dev_minimal_65816.h  dev_nova_64.c  dev_nova_64.h  device.c  device.h  filt_65816_asm.c  filt_65816_asm.h  log.c  log.h  ram_8d_24a.c  ram_8d_24a.h  signal_history.c  signal_history_profiles.c  signal_history_profiles.h  signal_line.h  types.h  utils.h
src/gui/: config.cpp  config.h  debug.h  main.cpp  main.cpp.leftovers.cpp  panel.h  panel_chip_oscillator.cpp  panel_chip_oscillator.h  panel_chip_poweronreset.cpp  panel_chip_poweronreset.h  panel_control.cpp  panel_cpu_6502.cpp  panel_cpu_65816.cpp  panel_cpu_65816.h  panel_dev_commodore_pet.cpp  panel_dev_minimal_6502.cpp  panel_dev_minimal_65816.cpp  panel_dev_minimal_65816.h  panel_dev_nova_64.cpp  panel_dev_nova_64.h  panel_logic_analyzer.cpp  panel_memory.cpp  panel_memory.h  ui_context.cpp  ui_context.h  widgets.h
src/sys/: threads.c
src/templates/: chip_template.c  chip_template.h
